--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,10 @@
       		<plugin>
           		<groupId>org.apache.maven.plugins</groupId>
           		<artifactId>maven-checkstyle-plugin</artifactId>
-          		<version>2.11</version>
+          		<version>2.12</version>
+          		<configuration>
+          			<configLocation>custom_style.xml</configLocation>
+        		</configuration>
         	</plugin>
        </plugins>
 	</build>
